// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single fields date field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div
      className="ant-picker"
      onMouseUp={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="ant-picker-input"
      >
        <input
          autoComplete="off"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          placeholder=""
          readOnly={true}
          size={12}
          title=""
          value=""
        />
        <span
          className="ant-picker-suffix"
        >
          <span
            aria-label="calendar"
            className="anticon anticon-calendar"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="calendar"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
  <button
    className="ant-btn ant-btn-submit"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields field with description 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      id="root"
    >
      <div
        className="ant-row"
        style={
          Object {
            "marginLeft": -12,
            "marginRight": -12,
          }
        }
      >
        
        <div
          className="ant-col ant-col-24"
          style={
            Object {
              "paddingLeft": 12,
              "paddingRight": 12,
            }
          }
        >
          <div
            className="form-group field field-string"
          >
            <div
              className="ant-form-item ant-form-item-with-help"
            >
              <div
                className="ant-row ant-form-item-row"
                style={Object {}}
              >
                <div
                  className="ant-col ant-col-24 ant-form-item-label"
                  style={Object {}}
                >
                  <label
                    className=""
                    htmlFor="root_my-field"
                    title="my-field"
                  >
                    my-field
                  </label>
                </div>
                <div
                  className="ant-col ant-col-24 ant-form-item-control"
                  style={Object {}}
                >
                  <div
                    className="ant-form-item-control-input"
                  >
                    <div
                      className="ant-form-item-control-input-content"
                    >
                      <span
                        className="ant-input-affix-wrapper ant-input-affix-wrapper-has-feedback"
                        onMouseDown={[Function]}
                        style={
                          Object {
                            "width": "100%",
                          }
                        }
                      >
                        <input
                          className="ant-input"
                          hidden={null}
                          id="root_my-field"
                          name="root_my-field"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          placeholder=""
                          style={null}
                          type="text"
                          value=""
                        />
                        <span
                          className="ant-input-suffix"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="ant-form-item-extra"
                  >
                    <span
                      id="root_my-field__description"
                    >
                      some description
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <button
    className="ant-btn"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    <span>
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields field with description in uiSchema 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      id="root"
    >
      <div
        className="ant-row"
        style={
          Object {
            "marginLeft": -12,
            "marginRight": -12,
          }
        }
      >
        
        <div
          className="ant-col ant-col-24"
          style={
            Object {
              "paddingLeft": 12,
              "paddingRight": 12,
            }
          }
        >
          <div
            className="form-group field field-string"
          >
            <div
              className="ant-form-item ant-form-item-with-help"
            >
              <div
                className="ant-row ant-form-item-row"
                style={Object {}}
              >
                <div
                  className="ant-col ant-col-24 ant-form-item-label"
                  style={Object {}}
                >
                  <label
                    className=""
                    htmlFor="root_my-field"
                    title="my-field"
                  >
                    my-field
                  </label>
                </div>
                <div
                  className="ant-col ant-col-24 ant-form-item-control"
                  style={Object {}}
                >
                  <div
                    className="ant-form-item-control-input"
                  >
                    <div
                      className="ant-form-item-control-input-content"
                    >
                      <span
                        className="ant-input-affix-wrapper ant-input-affix-wrapper-has-feedback"
                        onMouseDown={[Function]}
                        style={
                          Object {
                            "width": "100%",
                          }
                        }
                      >
                        <input
                          className="ant-input"
                          hidden={null}
                          id="root_my-field"
                          name="root_my-field"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          placeholder=""
                          style={null}
                          type="text"
                          value=""
                        />
                        <span
                          className="ant-input-suffix"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="ant-form-item-extra"
                  >
                    <span
                      id="root_my-field__description"
                    >
                      some other description
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <button
    className="ant-btn"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    <span>
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields hidden field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <fieldset
      id="root"
    >
      <div
        className="ant-row"
        style={
          Object {
            "marginLeft": -12,
            "marginRight": -12,
          }
        }
      >
        
      </div>
    </fieldset>
  </div>
  <button
    className="ant-btn"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    <span>
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields null field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-null"
  />
  <button
    className="ant-btn"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    <span>
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields number field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-number"
  >
    <div
      className="ant-input-number"
      onBlur={[Function]}
      onCompositionEnd={[Function]}
      onCompositionStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="ant-input-number-handler-wrap"
      >
        <span
          aria-disabled={false}
          aria-label="Increase Value"
          className="ant-input-number-handler ant-input-number-handler-up"
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="button"
          unselectable="on"
        >
          <span
            aria-label="up"
            className="anticon anticon-up ant-input-number-handler-up-inner"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="up"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
              />
            </svg>
          </span>
        </span>
        <span
          aria-disabled={false}
          aria-label="Decrease Value"
          className="ant-input-number-handler ant-input-number-handler-down"
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          role="button"
          unselectable="on"
        >
          <span
            aria-label="down"
            className="anticon anticon-down ant-input-number-handler-down-inner"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="ant-input-number-input-wrap"
      >
        <input
          aria-valuenow={null}
          autoComplete="off"
          className="ant-input-number-input"
          disabled={false}
          id="root"
          name="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder=""
          role="spinbutton"
          step={1}
          type="number"
          value=""
        />
      </div>
    </div>
  </div>
  <button
    className="ant-btn"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    <span>
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields string field format data-url 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <div>
      <p>
        <input
          autoFocus={false}
          defaultValue=""
          disabled={false}
          id="root"
          onChange={[Function]}
          type="file"
        />
      </p>
    </div>
  </div>
  <button
    className="ant-btn"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    <span>
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields string field format email 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <input
      className="ant-input"
      id="root"
      name="root"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      style={
        Object {
          "width": "100%",
        }
      }
      type="email"
      value=""
    />
  </div>
  <button
    className="ant-btn"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    <span>
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields string field format uri 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <input
      className="ant-input"
      id="root"
      name="root"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      style={
        Object {
          "width": "100%",
        }
      }
      type="url"
      value=""
    />
  </div>
  <button
    className="ant-btn"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    <span>
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields string field regular 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <input
      className="ant-input"
      id="root"
      name="root"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      style={
        Object {
          "width": "100%",
        }
      }
      type="text"
      value=""
    />
  </div>
  <button
    className="ant-btn"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    <span>
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields unsupported field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-undefined"
  >
    <div
      className="unsupported-field"
    >
      <p>
        Unsupported field schema
        <span>
           for
           field 
          <code>
            root
          </code>
        </span>
        <em>
          : 
          Unknown field type undefined
        </em>
        .
      </p>
      <pre>
        {}
      </pre>
    </div>
  </div>
  <button
    className="ant-btn"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    <span>
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields using custom tagName 1`] = `
<div
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-string"
  >
    <input
      className="ant-input"
      id="root"
      name="root"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      style={
        Object {
          "width": "100%",
        }
      }
      type="text"
      value=""
    />
  </div>
  <button
    className="ant-btn"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    <span>
      Submit
    </span>
  </button>
</div>
`;
